# BabyBrain

./: CMakeLists.txt  README.md
BabyBrainPreparation/: BabyBrainPreparation.py  CMakeLists.txt
BabyBrainPreparation/Resources/atlases/RAS/NEO2012/: info.md
BabyBrainSegmentation/: BabyBrainSegmentation.py  CMakeLists.txt
BabyBrainSegmentation/Resources/: 2018_USP_BabyBrain.ctbl  2018_USP_BabyBrain_Lateralized.ctbl  runBabyBrainPreparation  runBabyBrainSegmentation
BabyWholeBrain/: BabyWholeBrain.py  CMakeLists.txt
BayesianTissueClassifier/: BayesianTissueClassifier.cxx  BayesianTissueClassifier.xml  CMakeLists.txt
BrainVolumeRefinement/: BrainVolumeRefinement.cxx  BrainVolumeRefinement.xml  CMakeLists.txt
GlobalContrastEnhancer/: CMakeLists.txt  GlobalContrastEnhancer.cxx  GlobalContrastEnhancer.xml
LocalLabelingCorrection/: CMakeLists.txt  LocalLabelingCorrection.cxx  LocalLabelingCorrection.xml
SplitLabelValues/: CMakeLists.txt  SplitLabelValues.cxx  SplitLabelValues.xml
